--- a/src/components/Blog/SingleBlog.module.css
+++ b/src/components/Blog/SingleBlog.module.css
@@ -1,4 +1,4 @@
-/* SingleBlog.module.css */
+/* Main Container */
 .mainContainer {
   scroll-padding-top: 100px;
   scroll-behavior: smooth;
@@ -16,6 +16,7 @@
   font-size: 1rem;
 }
 
+/* Headings */
 .article h1 {
   font-size: 2.25rem;
   line-height: 1.3;
@@ -27,8 +28,7 @@
 .article h2 {
   font-size: 1.75rem;
   line-height: 1.4;
-  margin-top: 1.75rem;
-  margin-bottom: 1rem;
+  margin: 1.75rem 0 1rem;
   font-weight: 600;
   color: #38a169;
   display: flex;
@@ -43,8 +43,7 @@
 .article h3 {
   font-size: 1.5rem;
   line-height: 1.5;
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
+  margin: 1.5rem 0 1rem;
   font-weight: 500;
   color: #2d3748;
 }
@@ -54,12 +53,12 @@
 .article h6 {
   font-size: 1.25rem;
   line-height: 1.6;
-  margin-top: 1.25rem;
-  margin-bottom: 1rem;
+  margin: 1.25rem 0 1rem;
   font-weight: 500;
   color: #2d3748;
 }
 
+/* Paragraphs */
 .article p {
   font-size: 1rem;
   line-height: 1.7;
@@ -67,6 +66,7 @@
   color: #555;
 }
 
+/* Links */
 .article a {
   color: #4299e1;
   text-decoration: underline;
@@ -77,10 +77,11 @@
   color: #2b6cb0;
 }
 
+/* Lists */
 .article ul,
 .article ol {
   margin-bottom: 1rem;
-  padding-left: 1.25rem;
+  padding-left: 1.5rem;
 }
 
 .article ul {
@@ -94,19 +95,38 @@
 .article li {
   font-size: 1rem;
   line-height: 1.7;
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.5rem;
   color: #555;
-  display: flex;
-  align-items: flex-start;
-  gap: 0.5rem;
+  position: relative;
+  padding-left: 0.25rem;
 }
 
-.article li span {
+/* Nested List Styles */
+.article ul ul,
+.article ol ol,
+.article ul ol,
+.article ol ul {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  padding-left: 1.5rem;
+}
+
+/* Custom List Markers */
+.article ul li::marker {
   color: #38a169;
-  font-size: 1rem;
-  line-height: 1.7;
 }
 
+.article ol li::marker {
+  color: #2d3748;
+  font-weight: 600;
+}
+
+.article li ul li::marker,
+.article li ol li::marker {
+  color: #718096;
+}
+
+/* Blockquote */
 .article blockquote {
   margin: 1.25rem 0;
   padding: 1rem;
@@ -122,6 +142,7 @@
   line-height: 1.6;
 }
 
+/* Tables */
 .article table {
   width: 100%;
   margin-bottom: 1.25rem;
@@ -157,6 +178,7 @@
   font-size: 0.9rem;
 }
 
+/* Inline Formatting */
 .article strong {
   font-weight: 600;
   color: #2d3748;
@@ -167,7 +189,7 @@
   color: #718096;
 }
 
-/* Table of Contents Styles */
+/* Table of Contents (TOC) */
 .tocNav {
   background-color: #f0f9f0;
   border-radius: 0.5rem;
@@ -258,23 +280,13 @@
   border-radius: 0 2px 2px 0;
 }
 
-.tocListItem.ml2 {
-  padding-left: 1rem;
-}
+/* TOC Nested Indentation */
+.tocListItem.ml2 { padding-left: 1rem; }
+.tocListItem.ml4 { padding-left: 1.5rem; }
+.tocListItem.ml6 { padding-left: 2rem; }
+.tocListItem.ml8 { padding-left: 2.5rem; }
 
-.tocListItem.ml4 {
-  padding-left: 1.5rem;
-}
-
-.tocListItem.ml6 {
-  padding-left: 2rem;
-}
-
-.tocListItem.ml8 {
-  padding-left: 2.5rem;
-}
-
-/* Scrollbar Styles for Table of Contents */
+/* TOC Scrollbar */
 .tocNav::-webkit-scrollbar {
   width: 6px;
 }
@@ -292,7 +304,7 @@
   background-color: #7fb37f;
 }
 
-/* Smooth Scroll for Headings */
+/* Heading Scroll Margin */
 .article h1,
 .article h2,
 .article h3,
@@ -300,4 +312,4 @@
 .article h5,
 .article h6 {
   scroll-margin-top: 100px;
-} 
+}
